samples/_failures_safe/1761319857_20f953_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9196d5ea.c: In function ‘main’:
./samples/SAFE/__tmp_9196d5ea.c:147:5: error: expected declaration or statement at end of input
  147 |     }
      |     ^
